backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  ports:
    - port: 5000
  selector:
    app: backend
